--- a/src/app/cv-detail/cv-detail.component.html
+++ b/src/app/cv-detail/cv-detail.component.html
@@ -9,5 +9,7 @@
     <p><strong>CIN :</strong> {{ cv.cin }}</p>
     <p><strong>Poste :</strong> {{ cv.job }}</p>
     <!-- <p><strong>CV PDF :</strong> <a [href]="cv.pathToPhoto" target="_blank">Télécharger le CV</a></p> -->
+
+    <button (click)="embaucher(cv)">Embaucher</button>
   </div>
   
