--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,34 +1,2 @@
-<h1>Exercice 1</h1>
-<app-color></app-color>
-<br>
-
-<h1>Exercice 2</h1>
-<app-carte-visite></app-carte-visite>
-<br>
-
-<h1>Exercice 3 et 4</h1>
-<app-parent></app-parent>
-<br>
-
-<h1>Exercice 5</h1>
-<app-cv></app-cv>
-<br>
-
-<h1>Exercice 6</h1>
-<!-- Case 1: Valid image URL -->
-<img [src]="'assets/images/avatar.jpg' | defaultImgName" alt="Avatar Image">
-
-<!-- Case 2: Chaine Vide -->
-<img [src]="'' | defaultImgName" alt="Chaine Vide">
-
-<!-- Case 3: Ne contient que des espaces -->
-<img [src]="'    ' | defaultImgName" alt="Ne contient que des espaces">
-<br>
-
-<h1>Exercice 7</h1>
-<app-mini-word></app-mini-word>
-<br>
-
-<h1>Exercice 8</h1>
-<input type="text" appRainbowText placeholder="Tapez quelque chose...">
-<br>
+<app-header></app-header>
+<router-outlet></router-outlet>
