--- a/src/app/cv-item/cv-item.component.html
+++ b/src/app/cv-item/cv-item.component.html
@@ -2,5 +2,5 @@
   <strong [ngClass]="{ 'highlight': cv.age > 30 }"
     [ngStyle]="{ 'border-bottom': cv.age > 30 ? '2px solid red' : '2px solid green' }">{{ cv.firstName }} {{
     cv.lastName }}</strong>
-  <p>{{ cv.job }} - {{ cv.age }} ans</p>
+  <button [routerLink]="['/cv', cv.id]" class="details-btn">Voir Détails</button>
 </div>
