--- a/src/app/cv-list/cv-list.component.html
+++ b/src/app/cv-list/cv-list.component.html
@@ -1,5 +1,5 @@
 <ul>
-    <li *ngFor="let cv of cvs" (click)="onCvClick(cv)" [ngStyle]="{ 'cursor': 'pointer' }">
-      <app-cv-item [cv]="cv"></app-cv-item>
-    </li>
-  </ul>
+  <li *ngFor="let cv of cvs">
+    <app-cv-item [cv]="cv"></app-cv-item>
+  </li>
+</ul>
