--- a/src/app/cv-item/cv-item.component.html
+++ b/src/app/cv-item/cv-item.component.html
@@ -1,6 +1,6 @@
 <div>
   <strong [ngClass]="{ 'highlight': cv.age > 30 }"
-    [ngStyle]="{ 'border-bottom': cv.age > 30 ? '2px solid red' : '2px solid green' }">{{ cv.firstName }} {{
-    cv.lastName }}</strong>
+    [ngStyle]="{ 'border-bottom': cv.age > 30 ? '2px solid red' : '2px solid green' }">{{ cv.name }} {{
+    cv.firstname }}</strong>
   <button [routerLink]="['/cv', cv.id]" class="details-btn">Voir Détails</button>
 </div>
