--- a/src/app/hired-list/hired-list.component.html
+++ b/src/app/hired-list/hired-list.component.html
@@ -1,6 +1,6 @@
 <h3>Liste des embauchés</h3>
 <ul>
   <li *ngFor="let cv of embaucheList">
-    {{ cv.firstName }} {{ cv.lastName }} - {{ cv.job }}
+    {{ cv.name }} {{ cv.firstname }} - {{ cv.job }}
   </li>
 </ul>
