--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,5 +7,6 @@
         <li><a routerLink="#">Exercice 6</a></li>
         <li><a routerLink="/mini-word" routerLinkActive="active">Exercice 7</a></li>
         <li><a routerLink="#">Exercice 8</a></li>
+        <li><a routerLink="/auth-form" routerLinkActive="active">Auth Form</a></li>
     </ul>
 </nav>
