--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,5 +8,6 @@
         <li><a routerLink="/mini-word" routerLinkActive="active">Exercice 7</a></li>
         <li><a routerLink="#">Exercice 8</a></li>
         <li><a routerLink="/auth-form" routerLinkActive="active">Auth Form</a></li>
+        <li><a routerLink="/image-loop" routerLinkActive="active">Image Loop</a></li>
     </ul>
 </nav>
